# Titanic-Passenger-Class-Prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt  titanic-passenger-class-prediction.ipynb
app/: app.py  utils.py
app/pages/: 1_Data_Explorer.py  2_SQL_Analytics.py  3_Model_Performance.py  4_Predict_Passenger_Class.py
artifacts/: data_preparation_summary.json
artifacts/metrics/: best_hyperparameters.json  model_comparison.csv  model_metadata.json  randomized_search_results.csv  test_metrics.json
artifacts/predictions/: external_classification_report.csv  external_test_metrics.json  test_prediction_summary.json  test_predictions.csv
data/: titanic.sqlite
data/processed/: passengers.parquet
notebooks/: 01_data_exploration.ipynb  titanic-passenger-class-prediction-cleaned.ipynb  titanic-passenger-class-prediction-final.ipynb
reports/: classification_report.csv  training_summary.md
reports/sql/: 01_dataset_overview.csv  02_passenger_class_distribution.csv  03_class_profile.csv  04_survival_by_class_and_sex.csv  06_age_profile_by_class.csv  (+16 more)
scripts/: __init__.py  build_database.py  predict.py  prepare_data.py  prepare_external_data.py  run_analysis.py  train.py
sql/: analysis_queries.sql  create_views.sql
tests/: test_data.py  test_database.py  test_evaluation.py  test_features.py  test_modeling.py  test_persistence.py  test_predict.py  test_prediction.py  test_prepare_external_data.py  test_preprocessing.py  test_reporting.py  test_run_analysis.py  test_sql_queries.py  test_train.py  test_tuning.py  test_validation.py  test_visualization.py
(+18 files in other folders)
